<resources>
    <string name="app_name">Kiosk Example</string>
    <string name="device_admin_enabled">Device Admin enabled</string>
    <string name="device_admin_warning">Warning: Device Admin is going to be disabled.</string>
    <string name="device_admin_disabled">Device Admin disabled</string>
    <string name="kiosk_mode_enabled">Kiosk Mode enabled</string>
    <string name="kiosk_mode_disabled">Kiosk Mode disabled</string>
    <string name="enter_kiosk_mode">Enter Kiosk Mode</string>
    <string name="exit_kiosk_mode">Exit Kiosk Mode</string>
    <string name="kiosk_not_permitted">Kiosk Mode not permitted</string>
    <string name="not_device_admin">This app is not a device admin!</string>
    <string name="device_admin">This app is a device admin!</string>
    <string name="not_device_owner">This app is not the device owner!</string>
    <string name="device_owner">This app is the device owner!</string>
    <string name="check_device_owner_app">Check For Device Owner App</string>
    <string name="check_admin_active">Check For Admin Active</string>
    <string name="clear_device_owner_app">Clear Device Owner App</string>
    <string name="enable_device_manager">Enable Device Manager</string>
    <string name="disable_device_manager">Disable Device Manager</string>
</resources>
